# ai-pdf-summarizer

./: LICENSE  README.md  app.py  ingest.py  main.py  pyproject.toml
agent/: chunker.py  config.py  embeddings.py  pdf_loader.py  qa.py  qdrant_store.py  retriever.py  summarizer.py  vector_store.py
agent/models/: document.py
agent/prompts/: qa_prompt.py  summary_prompt.py
agent/qdrant_data/: meta.json
agent/services/: chat_service.py  document_service.py  session_service.py
agent/utils/: hash_utils.py
api/: main.py
data/faiss_index/: index.faiss  index.pkl
tests/: test_chat.py  test_ingestion.py
