[project]
name = "pdf-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "uvicorn>=0.48.0",
]
